--- a/.github/workflows/job02.yaml
+++ b/.github/workflows/job02.yaml
@@ -1,6 +1,11 @@
 name: Job02
 
-on: push
+on:
+  push:
+  pull_request:
+    schedule:
+      - cron: '*/5 * * * *' # every 5 minutes
+    workflow_dispatch:
 
 jobs:
   job-one:
