--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -8,5 +8,10 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Printing Current Directory
-        run: ls -al
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+      - name: Install Dependencies
+        working-directory: ./react-app
+        run: npm ci
