--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -13,5 +13,5 @@ jobs:
         with:
           node-version: '23.x'
       - name: Install Dependencies
-        working-directory: react-actions
+        working-directory: react-actions/react-app
         run: npm ci
