--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -5,6 +5,9 @@ on: push
 jobs:
   build-react-app:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: react-actions/react-app
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -13,5 +16,6 @@ jobs:
         with:
           node-version: '23.x'
       - name: Install Dependencies
-        working-directory: react-actions/react-app
         run: npm ci
+      - name: Run Unit Tests
+        run: npm run test
